--- a/Learncode/DataStruct/DataStruct/DataStruct.vcxproj
+++ b/Learncode/DataStruct/DataStruct/DataStruct.vcxproj
@@ -92,6 +92,7 @@
     <ClInclude Include="Find.h" />
     <ClInclude Include="MemoryPool.h" />
     <ClInclude Include="MyArray1.h" />
+    <ClInclude Include="ReverseList.h" />
     <ClInclude Include="Singleton.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
