--- a/Learncode/DataStruct/DataStruct/DataStruct.vcxproj.filters
+++ b/Learncode/DataStruct/DataStruct/DataStruct.vcxproj.filters
@@ -30,9 +30,6 @@
     <ClCompile Include="AlgoUtil.cpp">
       <Filter>Header Files</Filter>
     </ClCompile>
-    <ClCompile Include="MemoryPool.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyArray1.h">
@@ -44,14 +41,14 @@
     <ClInclude Include="AlgoUtil.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="MemoryPool.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Singleton.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ReverseList.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Alloctor1.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
