抽离分配器，并简化为宏定义

--- a/Learncode/DataStruct/DataStruct/DataStruct.vcxproj.filters
+++ b/Learncode/DataStruct/DataStruct/DataStruct.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="..\..\Alloctor2.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Alloctor3.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
