--- a/Learncode/DataStruct/DataStruct/DataStruct.vcxproj
+++ b/Learncode/DataStruct/DataStruct/DataStruct.vcxproj
@@ -90,6 +90,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\Alloctor1.h" />
     <ClInclude Include="..\..\Alloctor2.h" />
+    <ClInclude Include="..\..\Alloctor3.h" />
     <ClInclude Include="AlgoUtil.h" />
     <ClInclude Include="Find.h" />
     <ClInclude Include="MyArray1.h" />
