--- a/Learncode/DataStruct/DataStruct/DataStruct.vcxproj
+++ b/Learncode/DataStruct/DataStruct/DataStruct.vcxproj
@@ -91,6 +91,7 @@
     <ClInclude Include="..\..\Alloctor1.h" />
     <ClInclude Include="..\..\Alloctor2.h" />
     <ClInclude Include="..\..\Alloctor3.h" />
+    <ClInclude Include="..\..\DesignMode\FactoryMethod.h" />
     <ClInclude Include="AlgoUtil.h" />
     <ClInclude Include="Find.h" />
     <ClInclude Include="MyArray1.h" />
